# bbs-browser

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  install.ps1  install.sh  pyproject.toml
.claude/: .cw-injected.json
.claude/agents/: cw-fixer.md  cw-implementer.md  cw-reviewer.md
.code-workbench/: dead-code-findings.json  duplicates-exclude.json  duplicates-findings.json
.code-workbench/.arch/: mcp-client.json  module-split-page-sysop-configmenu.json  newsdesk.json  shared-ui-building-blocks.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: version-bump.yml
bbs_browser/: __init__.py  bigtext.py  boxes.py  browser.py  bulletins.py  chatlog.py  cli.py  colors.py  configmenu.py  constants.py  db.py  dragon.py  feeds.py  fetch.py  firecrawl.py  forms.py  games.py  headers.py  images.py  jsrender.py  keys.py  lightbar.py  manual.py  markdown.py  mcp.py  menukit.py  modem.py  navigation.py  newsdesk.py  nostalgia.py  page.py  rawscreen.py  render.py  retronet.py  rpg.py  screensaver.py  space.py  state.py  styletpl.py  sysop.py  (+11 more)
bbs_browser/configmenu/: __init__.py  _shared.py  ai.py  bulletins.py  display.py  firecrawl.py  mcp.py  shell.py  weather.py
bbs_browser/i18n/: __init__.py  strings_browser.py  strings_bulletins.py  strings_chatlog.py  strings_cli.py  strings_configmenu.py  strings_dragon.py  strings_feeds.py  strings_games.py  strings_images.py  strings_lightbar.py  strings_manual.py  strings_navigation.py  strings_nostalgia.py  strings_page.py  strings_render.py  strings_retronet.py  strings_screensaver.py  strings_space.py  strings_styletpl.py  strings_sysop.py  strings_sysop_tools.py  strings_terminal.py  strings_update.py  strings_users.py  (+1 more)
docs/: plan-ki-anrufer.md
tests/: test_bbs.py
tools/: bump_version.py  make_logo.py  shots.py
(+10 files in other folders)
